--- a/BionX_Minimum_Translator.ioc
+++ b/BionX_Minimum_Translator.ioc
@@ -1,197 +1,190 @@
 #MicroXplorer Configuration settings - do not modify
-ADC1.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_0
-ADC1.IPParameters=Rank-0\#ChannelRegularConversion,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,NbrOfConversionFlag,master
-ADC1.NbrOfConversionFlag=1
-ADC1.Rank-0\#ChannelRegularConversion=1
-ADC1.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_1CYCLE_5
-ADC1.master=1
-CAN.BS1=CAN_BS1_13TQ
-CAN.BS2=CAN_BS2_2TQ
-CAN.CalculateTimeBit=16000
-CAN.CalculateTimeQuantum=1000.0
-CAN.IPParameters=CalculateTimeQuantum,CalculateTimeBit,BS1,BS2,Prescaler
-CAN.Prescaler=36
-Dma.Request0=USART1_RX
-Dma.Request1=USART1_TX
-Dma.RequestsNb=2
-Dma.USART1_RX.0.Direction=DMA_PERIPH_TO_MEMORY
-Dma.USART1_RX.0.Instance=DMA1_Channel5
-Dma.USART1_RX.0.MemDataAlignment=DMA_MDATAALIGN_BYTE
-Dma.USART1_RX.0.MemInc=DMA_MINC_ENABLE
-Dma.USART1_RX.0.Mode=DMA_NORMAL
-Dma.USART1_RX.0.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
-Dma.USART1_RX.0.PeriphInc=DMA_PINC_DISABLE
-Dma.USART1_RX.0.Priority=DMA_PRIORITY_LOW
-Dma.USART1_RX.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
-Dma.USART1_TX.1.Direction=DMA_MEMORY_TO_PERIPH
-Dma.USART1_TX.1.Instance=DMA1_Channel4
-Dma.USART1_TX.1.MemDataAlignment=DMA_MDATAALIGN_BYTE
-Dma.USART1_TX.1.MemInc=DMA_MINC_ENABLE
-Dma.USART1_TX.1.Mode=DMA_NORMAL
-Dma.USART1_TX.1.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
-Dma.USART1_TX.1.PeriphInc=DMA_PINC_DISABLE
-Dma.USART1_TX.1.Priority=DMA_PRIORITY_LOW
-Dma.USART1_TX.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
-File.Version=6
-KeepUserPlacement=false
 Mcu.Family=STM32F1
-Mcu.IP0=ADC1
-Mcu.IP1=CAN
-Mcu.IP2=DMA
-Mcu.IP3=NVIC
-Mcu.IP4=RCC
-Mcu.IP5=SYS
-Mcu.IP6=TIM1
-Mcu.IP7=USART1
-Mcu.IPNb=8
-Mcu.Name=STM32F103C(4-6)Tx
-Mcu.Package=LQFP48
-Mcu.Pin0=PC13-TAMPER-RTC
-Mcu.Pin1=PD0-OSC_IN
-Mcu.Pin10=PA12
-Mcu.Pin11=PA13
-Mcu.Pin12=PA14
-Mcu.Pin13=VP_SYS_VS_Systick
-Mcu.Pin14=VP_TIM1_VS_ClockSourceINT
-Mcu.Pin2=PD1-OSC_OUT
-Mcu.Pin3=PA0-WKUP
-Mcu.Pin4=PA1
-Mcu.Pin5=PA2
-Mcu.Pin6=PA3
-Mcu.Pin7=PA9
-Mcu.Pin8=PA10
-Mcu.Pin9=PA11
+RCC.PLLSourceVirtual=RCC_PLLSOURCE_HSE
+ProjectManager.MainLocation=Src
+NVIC.ADC1_2_IRQn=true\:0\:0\:false\:false\:true\:true\:true
+Dma.USART1_TX.1.Instance=DMA1_Channel4
+RCC.MCOFreq_Value=72000000
+ProjectManager.ProjectFileName=BionX_Minimum_Translator.ioc
+ADC1.Rank-0\#ChannelRegularConversion=1
+NVIC.DMA1_Channel5_IRQn=true\:0\:0\:false\:false\:true\:false\:true
+PD1-OSC_OUT.Mode=HSE-External-Oscillator
+Dma.USART1_RX.0.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+ProjectManager.KeepUserCode=true
+PA10.Mode=Asynchronous
+Mcu.UserName=STM32F103C8Tx
 Mcu.PinsNb=15
-Mcu.ThirdPartyNb=0
-Mcu.UserConstants=
-Mcu.UserName=STM32F103C6Tx
-MxCube.Version=4.27.0
-MxDb.Version=DB.4.0.270
-NVIC.ADC1_2_IRQn=true\:0\:0\:false\:false\:true\:true
-NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false
-NVIC.DMA1_Channel4_IRQn=true\:0\:0\:false\:false\:true\:false
-NVIC.DMA1_Channel5_IRQn=true\:0\:0\:false\:false\:true\:false
-NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false
-NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false
-NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false
-NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false
-NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false
-NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
-NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false
-NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false
-NVIC.USB_HP_CAN1_TX_IRQn=true\:0\:0\:false\:false\:true\:true
-NVIC.USB_LP_CAN1_RX0_IRQn=true\:0\:0\:false\:false\:true\:true
-NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false
-PA0-WKUP.GPIOParameters=GPIO_Label
+Dma.USART1_TX.1.MemInc=DMA_MINC_ENABLE
+ProjectManager.NoMain=false
+ADC1.IPParameters=Rank-0\#ChannelRegularConversion,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,NbrOfConversionFlag,master
+Dma.USART1_TX.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
+USART1.BaudRate=9600
+SH.ADCx_IN2.0=ADC1_IN2,IN2
+RCC.PLLCLKFreq_Value=72000000
+PC13-TAMPER-RTC.GPIOParameters=GPIO_Label
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_CAN_Init-CAN-false-HAL-true,5-MX_USART1_UART_Init-USART1-false-HAL-true,6-MX_TIM1_Init-TIM1-false-HAL-true,7-MX_ADC1_Init-ADC1-false-HAL-true
+PC13-TAMPER-RTC.Signal=GPIO_Output
+PA11.Mode=Master
+PA3.GPIOParameters=GPIO_Label
+RCC.ADCFreqValue=12000000
+ProjectManager.DefaultFWLocation=true
+PD0-OSC_IN.Signal=RCC_OSC_IN
+ProjectManager.DeletePrevious=true
+USART1.IPParameters=VirtualMode,BaudRate
+RCC.APB1CLKDivider=RCC_HCLK_DIV2
+PA2.GPIOParameters=GPIO_Label
+CAN.CalculateTimeBit=16000
+PinOutPanel.RotationAngle=0
+RCC.FamilyName=M
+RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
+ProjectManager.StackSize=0x400
 PA0-WKUP.GPIO_Label=BatteryVoltage
 PA0-WKUP.Signal=ADCx_IN0
-PA1.GPIOParameters=GPIO_Label
-PA1.GPIO_Label=BatteryCurrent
-PA1.Signal=ADCx_IN1
-PA10.Locked=true
-PA10.Mode=Asynchronous
-PA10.Signal=USART1_RX
-PA11.Locked=true
-PA11.Mode=Master
-PA11.Signal=CAN_RX
-PA12.Locked=true
-PA12.Mode=Master
-PA12.Signal=CAN_TX
-PA13.Locked=true
-PA13.Mode=Serial_Wire
-PA13.Signal=SYS_JTMS-SWDIO
-PA14.Locked=true
-PA14.Mode=Serial_Wire
-PA14.Signal=SYS_JTCK-SWCLK
-PA2.GPIOParameters=GPIO_Label
-PA2.GPIO_Label=TorqueFromExternalSensor
-PA2.Signal=ADCx_IN2
-PA3.GPIOParameters=GPIO_Label
-PA3.GPIO_Label=PASFromExternalSensor
-PA3.Locked=true
-PA3.Signal=GPXTI3
-PA9.Locked=true
-PA9.Mode=Asynchronous
-PA9.Signal=USART1_TX
-PC13-TAMPER-RTC.GPIOParameters=GPIO_Label
-PC13-TAMPER-RTC.GPIO_Label=Board-LED
-PC13-TAMPER-RTC.Locked=true
-PC13-TAMPER-RTC.Signal=GPIO_Output
-PCC.Checker=false
-PCC.Line=STM32F103
-PCC.MCU=STM32F103C(4-6)Tx
-PCC.PartNumber=STM32F103C6Tx
-PCC.Seq0=0
-PCC.Series=STM32F1
-PCC.Temperature=25
-PCC.Vdd=3.3
-PD0-OSC_IN.Mode=HSE-External-Oscillator
-PD0-OSC_IN.Signal=RCC_OSC_IN
-PD1-OSC_OUT.Mode=HSE-External-Oscillator
 PD1-OSC_OUT.Signal=RCC_OSC_OUT
-PinOutPanel.RotationAngle=0
-ProjectManager.AskForMigrate=true
-ProjectManager.BackupPrevious=false
-ProjectManager.CompilerOptimize=6
-ProjectManager.ComputerToolchain=false
-ProjectManager.CoupleFile=false
-ProjectManager.CustomerFirmwarePackage=
-ProjectManager.DefaultFWLocation=true
-ProjectManager.DeletePrevious=true
-ProjectManager.DeviceId=STM32F103C6Tx
-ProjectManager.FirmwarePackage=STM32Cube FW_F1 V1.6.1
-ProjectManager.FreePins=false
-ProjectManager.HalAssertFull=false
-ProjectManager.HeapSize=0x200
-ProjectManager.KeepUserCode=true
-ProjectManager.LastFirmware=true
-ProjectManager.LibraryCopy=1
-ProjectManager.MainLocation=Src
-ProjectManager.NoMain=false
-ProjectManager.PreviousToolchain=SW4STM32
-ProjectManager.ProjectBuild=false
-ProjectManager.ProjectFileName=BionX_Minimum_Translator.ioc
-ProjectManager.ProjectName=BionX_Minimum_Translator
-ProjectManager.StackSize=0x400
-ProjectManager.TargetToolchain=SW4STM32
-ProjectManager.ToolChainLocation=
-ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_CAN_Init-CAN-false-HAL-true,5-MX_USART1_UART_Init-USART1-false-HAL-true,6-MX_TIM1_Init-TIM1-false-HAL-true,7-MX_ADC1_Init-ADC1-false-HAL-true
-RCC.ADCFreqValue=12000000
 RCC.ADCPresc=RCC_ADCPCLK2_DIV6
-RCC.AHBFreq_Value=72000000
-RCC.APB1CLKDivider=RCC_HCLK_DIV2
-RCC.APB1Freq_Value=36000000
-RCC.APB1TimFreq_Value=72000000
-RCC.APB2Freq_Value=72000000
-RCC.APB2TimFreq_Value=72000000
+PA13.Signal=SYS_JTMS-SWDIO
+Mcu.IP4=RCC
 RCC.FCLKCortexFreq_Value=72000000
-RCC.FamilyName=M
-RCC.HCLKFreq_Value=72000000
-RCC.IPParameters=ADCFreqValue,ADCPresc,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,MCOFreq_Value,PLLCLKFreq_Value,PLLMCOFreq_Value,PLLMUL,PLLSourceVirtual,SYSCLKFreq_VALUE,SYSCLKSource,TimSysFreq_Value,USBFreq_Value,VCOOutput2Freq_Value
-RCC.MCOFreq_Value=72000000
-RCC.PLLCLKFreq_Value=72000000
-RCC.PLLMCOFreq_Value=36000000
-RCC.PLLMUL=RCC_PLL_MUL9
-RCC.PLLSourceVirtual=RCC_PLLSOURCE_HSE
-RCC.SYSCLKFreq_VALUE=72000000
-RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
-RCC.TimSysFreq_Value=72000000
-RCC.USBFreq_Value=72000000
-RCC.VCOOutput2Freq_Value=8000000
-SH.ADCx_IN0.0=ADC1_IN0,IN0
-SH.ADCx_IN0.ConfNb=1
-SH.ADCx_IN1.0=ADC1_IN1,IN1
-SH.ADCx_IN1.ConfNb=1
-SH.ADCx_IN2.0=ADC1_IN2,IN2
-SH.ADCx_IN2.ConfNb=1
-SH.GPXTI3.0=GPIO_EXTI3
+Mcu.IP5=SYS
+Mcu.IP2=DMA
+NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+Mcu.IP3=NVIC
+Mcu.IP0=ADC1
+PA9.Mode=Asynchronous
+PA11.Locked=true
+PA12.Locked=true
+Mcu.IP1=CAN
+PA12.Signal=CAN_TX
+CAN.BS2=CAN_BS2_2TQ
+NVIC.USB_HP_CAN1_TX_IRQn=true\:0\:0\:false\:false\:true\:true\:true
+CAN.BS1=CAN_BS1_13TQ
+CAN.Prescaler=36
 SH.GPXTI3.ConfNb=1
-USART1.BaudRate=9600
-USART1.IPParameters=VirtualMode,BaudRate
-USART1.VirtualMode=VM_ASYNC
-VP_SYS_VS_Systick.Mode=SysTick
-VP_SYS_VS_Systick.Signal=SYS_VS_Systick
-VP_TIM1_VS_ClockSourceINT.Mode=Internal
+Mcu.UserConstants=
+ProjectManager.TargetToolchain=SW4STM32
+Mcu.ThirdPartyNb=0
+Dma.USART1_RX.0.Direction=DMA_PERIPH_TO_MEMORY
+RCC.HCLKFreq_Value=72000000
+Mcu.IPNb=8
+ProjectManager.PreviousToolchain=SW4STM32
+RCC.APB2TimFreq_Value=72000000
+PA9.Signal=USART1_TX
 VP_TIM1_VS_ClockSourceINT.Signal=TIM1_VS_ClockSourceINT
+Mcu.Pin6=PA3
+Mcu.Pin7=PA9
+PC13-TAMPER-RTC.Locked=true
+Mcu.Pin8=PA10
+RCC.USBFreq_Value=72000000
+Mcu.Pin9=PA11
+PA1.Signal=ADCx_IN1
+RCC.AHBFreq_Value=72000000
+Dma.USART1_RX.0.PeriphInc=DMA_PINC_DISABLE
+Dma.USART1_RX.0.Priority=DMA_PRIORITY_LOW
+Mcu.Pin0=PC13-TAMPER-RTC
+Mcu.Pin1=PD0-OSC_IN
+PD0-OSC_IN.Mode=HSE-External-Oscillator
+Mcu.Pin2=PD1-OSC_OUT
+Mcu.Pin3=PA0-WKUP
+PA0-WKUP.GPIOParameters=GPIO_Label
+Mcu.Pin4=PA1
+Mcu.Pin5=PA2
+ADC1.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_0
+ProjectManager.ProjectBuild=false
+NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+Dma.USART1_TX.1.MemDataAlignment=DMA_MDATAALIGN_BYTE
 board=custom
+SH.GPXTI3.0=GPIO_EXTI3
+NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false\:true
+ProjectManager.LastFirmware=true
+PC13-TAMPER-RTC.GPIO_Label=Board-LED
+RCC.PLLMUL=RCC_PLL_MUL9
+RCC.VCOOutput2Freq_Value=8000000
+ProjectManager.FirmwarePackage=STM32Cube FW_F1 V1.8.0
+MxDb.Version=DB.5.0.60
+RCC.APB2Freq_Value=72000000
+PA1.GPIOParameters=GPIO_Label
+ProjectManager.BackupPrevious=false
+MxCube.Version=5.6.1
+PA14.Mode=Serial_Wire
+SH.ADCx_IN0.ConfNb=1
+SH.ADCx_IN1.ConfNb=1
+SH.ADCx_IN2.ConfNb=1
+NVIC.USB_LP_CAN1_RX0_IRQn=true\:0\:0\:false\:false\:true\:true\:true
+File.Version=6
+PA1.GPIO_Label=BatteryCurrent
+VP_SYS_VS_Systick.Mode=SysTick
+Dma.USART1_RX.0.MemDataAlignment=DMA_MDATAALIGN_BYTE
+PA9.Locked=true
+NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+SH.ADCx_IN0.0=ADC1_IN0,IN0
+CAN.IPParameters=CalculateTimeQuantum,CalculateTimeBit,BS1,BS2,Prescaler
+NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+Dma.USART1_RX.0.MemInc=DMA_MINC_ENABLE
+PA13.Mode=Serial_Wire
+ProjectManager.FreePins=false
+RCC.IPParameters=ADCFreqValue,ADCPresc,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,MCOFreq_Value,PLLCLKFreq_Value,PLLMCOFreq_Value,PLLMUL,PLLSourceVirtual,SYSCLKFreq_VALUE,SYSCLKSource,TimSysFreq_Value,USBFreq_Value,VCOOutput2Freq_Value
+ProjectManager.AskForMigrate=true
+Mcu.Name=STM32F103C(4-6)Tx
+Dma.RequestsNb=2
+CAN.CalculateTimeQuantum=1000.0
+ProjectManager.HalAssertFull=false
+VP_TIM1_VS_ClockSourceINT.Mode=Internal
+ADC1.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_1CYCLE_5
+Dma.USART1_TX.1.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+PA2.Signal=ADCx_IN2
+ProjectManager.ProjectName=BionX_Minimum_Translator
+ProjectManager.UnderRoot=true
+Mcu.IP6=TIM1
+RCC.PLLMCOFreq_Value=36000000
+Mcu.IP7=USART1
+ProjectManager.CoupleFile=false
+RCC.SYSCLKFreq_VALUE=72000000
+Mcu.Package=LQFP48
+RCC.TimSysFreq_Value=72000000
+ADC1.master=1
+PA3.Locked=true
+PA12.Mode=Master
+PA10.Locked=true
+NVIC.ForceEnableDMAVector=true
+KeepUserPlacement=false
+Dma.USART1_TX.1.Mode=DMA_NORMAL
+NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+PA13.Locked=true
+PA14.Locked=true
+USART1.VirtualMode=VM_ASYNC
+ProjectManager.CompilerOptimize=6
+ProjectManager.ToolChainLocation=
+PA2.GPIO_Label=TorqueFromExternalSensor
+VP_SYS_VS_Systick.Signal=SYS_VS_Systick
+PA11.Signal=CAN_RX
+Dma.USART1_RX.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
+PA14.Signal=SYS_JTCK-SWCLK
+PA10.Signal=USART1_RX
+ProjectManager.HeapSize=0x200
+Dma.USART1_TX.1.PeriphInc=DMA_PINC_DISABLE
+NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+Mcu.Pin13=VP_SYS_VS_Systick
+Mcu.Pin14=VP_TIM1_VS_ClockSourceINT
+ProjectManager.ComputerToolchain=false
+NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
+ADC1.NbrOfConversionFlag=1
+SH.ADCx_IN1.0=ADC1_IN1,IN1
+Mcu.Pin11=PA13
+Mcu.Pin12=PA14
+Mcu.Pin10=PA12
+Dma.Request1=USART1_TX
+RCC.APB1TimFreq_Value=72000000
+NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+Dma.USART1_RX.0.Mode=DMA_NORMAL
+Dma.USART1_TX.1.Priority=DMA_PRIORITY_LOW
+NVIC.DMA1_Channel4_IRQn=true\:0\:0\:false\:false\:true\:false\:true
+Dma.Request0=USART1_RX
+RCC.APB1Freq_Value=36000000
+Dma.USART1_RX.0.Instance=DMA1_Channel5
+ProjectManager.CustomerFirmwarePackage=
+ProjectManager.DeviceId=STM32F103C6Tx
+ProjectManager.LibraryCopy=1
+PA3.GPIO_Label=PASFromExternalSensor
+PA3.Signal=GPXTI3
+Dma.USART1_TX.1.Direction=DMA_MEMORY_TO_PERIPH
