Blink on PC13 for indication

--- a/BionX_Minimum_Translator.ioc
+++ b/BionX_Minimum_Translator.ioc
@@ -1,146 +1,177 @@
 #MicroXplorer Configuration settings - do not modify
 Mcu.Family=STM32F1
-RCC.PLLSourceVirtual=RCC_PLLSOURCE_HSE
 ProjectManager.MainLocation=Src
 NVIC.ADC1_2_IRQn=true\:0\:0\:false\:false\:true\:true\:true
-Dma.USART1_TX.1.Instance=DMA1_Channel4
 RCC.MCOFreq_Value=72000000
-ProjectManager.ProjectFileName=BionX_Minimum_Translator.ioc
-ADC1.Rank-0\#ChannelRegularConversion=1
 NVIC.DMA1_Channel5_IRQn=true\:0\:0\:false\:false\:true\:false\:true
-PD1-OSC_OUT.Mode=HSE-External-Oscillator
-Dma.USART1_RX.0.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
 ProjectManager.KeepUserCode=true
-PA10.Mode=Asynchronous
 Mcu.UserName=STM32F103C8Tx
-Mcu.PinsNb=15
 Dma.USART1_TX.1.MemInc=DMA_MINC_ENABLE
-ProjectManager.NoMain=false
-ADC1.IPParameters=Rank-0\#ChannelRegularConversion,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,NbrOfConversionFlag,master
-Dma.USART1_TX.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
+TIM1.IPParameters=Prescaler,Period
 USART1.BaudRate=9600
 SH.ADCx_IN2.0=ADC1_IN2,IN2
 RCC.PLLCLKFreq_Value=72000000
 PC13-TAMPER-RTC.GPIOParameters=GPIO_Label
 ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_CAN_Init-CAN-false-HAL-true,5-MX_USART1_UART_Init-USART1-false-HAL-true,6-MX_TIM1_Init-TIM1-false-HAL-true,7-MX_ADC1_Init-ADC1-false-HAL-true
-PC13-TAMPER-RTC.Signal=GPIO_Output
+VP_RTC_VS_RTC_Activate.Mode=RTC_Enabled
 PA11.Mode=Master
 PA3.GPIOParameters=GPIO_Label
 RCC.ADCFreqValue=12000000
-ProjectManager.DefaultFWLocation=true
-PD0-OSC_IN.Signal=RCC_OSC_IN
-ProjectManager.DeletePrevious=true
+NVIC.TIM1_UP_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 USART1.IPParameters=VirtualMode,BaudRate
-RCC.APB1CLKDivider=RCC_HCLK_DIV2
 PA2.GPIOParameters=GPIO_Label
-CAN.CalculateTimeBit=16000
 PinOutPanel.RotationAngle=0
-RCC.FamilyName=M
 RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
 ProjectManager.StackSize=0x400
-PA0-WKUP.GPIO_Label=BatteryVoltage
-PA0-WKUP.Signal=ADCx_IN0
 PD1-OSC_OUT.Signal=RCC_OSC_OUT
-RCC.ADCPresc=RCC_ADCPCLK2_DIV6
-PA13.Signal=SYS_JTMS-SWDIO
 Mcu.IP4=RCC
 RCC.FCLKCortexFreq_Value=72000000
-Mcu.IP5=SYS
+Mcu.IP5=RTC
 Mcu.IP2=DMA
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 Mcu.IP3=NVIC
 Mcu.IP0=ADC1
-PA9.Mode=Asynchronous
-PA11.Locked=true
 PA12.Locked=true
 Mcu.IP1=CAN
 PA12.Signal=CAN_TX
-CAN.BS2=CAN_BS2_2TQ
 NVIC.USB_HP_CAN1_TX_IRQn=true\:0\:0\:false\:false\:true\:true\:true
-CAN.BS1=CAN_BS1_13TQ
 CAN.Prescaler=36
 SH.GPXTI3.ConfNb=1
+TIM1.Prescaler=1000
 Mcu.UserConstants=
-ProjectManager.TargetToolchain=SW4STM32
 Mcu.ThirdPartyNb=0
-Dma.USART1_RX.0.Direction=DMA_PERIPH_TO_MEMORY
 RCC.HCLKFreq_Value=72000000
-Mcu.IPNb=8
+Mcu.IPNb=9
 ProjectManager.PreviousToolchain=SW4STM32
 RCC.APB2TimFreq_Value=72000000
-PA9.Signal=USART1_TX
-VP_TIM1_VS_ClockSourceINT.Signal=TIM1_VS_ClockSourceINT
-Mcu.Pin6=PA3
-Mcu.Pin7=PA9
-PC13-TAMPER-RTC.Locked=true
-Mcu.Pin8=PA10
-RCC.USBFreq_Value=72000000
-Mcu.Pin9=PA11
-PA1.Signal=ADCx_IN1
+Mcu.Pin6=PA1
+Mcu.Pin7=PA2
+Mcu.Pin8=PA3
+Mcu.Pin9=PA9
 RCC.AHBFreq_Value=72000000
-Dma.USART1_RX.0.PeriphInc=DMA_PINC_DISABLE
 Dma.USART1_RX.0.Priority=DMA_PRIORITY_LOW
 Mcu.Pin0=PC13-TAMPER-RTC
-Mcu.Pin1=PD0-OSC_IN
-PD0-OSC_IN.Mode=HSE-External-Oscillator
-Mcu.Pin2=PD1-OSC_OUT
-Mcu.Pin3=PA0-WKUP
+Mcu.Pin1=PC14-OSC32_IN
+Mcu.Pin2=PC15-OSC32_OUT
+Mcu.Pin3=PD0-OSC_IN
+Mcu.Pin4=PD1-OSC_OUT
 PA0-WKUP.GPIOParameters=GPIO_Label
-Mcu.Pin4=PA1
-Mcu.Pin5=PA2
+Mcu.Pin5=PA0-WKUP
 ADC1.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_0
 ProjectManager.ProjectBuild=false
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-Dma.USART1_TX.1.MemDataAlignment=DMA_MDATAALIGN_BYTE
-board=custom
-SH.GPXTI3.0=GPIO_EXTI3
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false\:true
-ProjectManager.LastFirmware=true
-PC13-TAMPER-RTC.GPIO_Label=Board-LED
 RCC.PLLMUL=RCC_PLL_MUL9
-RCC.VCOOutput2Freq_Value=8000000
 ProjectManager.FirmwarePackage=STM32Cube FW_F1 V1.8.0
 MxDb.Version=DB.5.0.60
-RCC.APB2Freq_Value=72000000
 PA1.GPIOParameters=GPIO_Label
 ProjectManager.BackupPrevious=false
-MxCube.Version=5.6.1
+PC14-OSC32_IN.Mode=LSE-External-Oscillator
 PA14.Mode=Serial_Wire
-SH.ADCx_IN0.ConfNb=1
 SH.ADCx_IN1.ConfNb=1
-SH.ADCx_IN2.ConfNb=1
-NVIC.USB_LP_CAN1_RX0_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 File.Version=6
-PA1.GPIO_Label=BatteryCurrent
-VP_SYS_VS_Systick.Mode=SysTick
-Dma.USART1_RX.0.MemDataAlignment=DMA_MDATAALIGN_BYTE
-PA9.Locked=true
-NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 SH.ADCx_IN0.0=ADC1_IN0,IN0
-CAN.IPParameters=CalculateTimeQuantum,CalculateTimeBit,BS1,BS2,Prescaler
 NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 Dma.USART1_RX.0.MemInc=DMA_MINC_ENABLE
-PA13.Mode=Serial_Wire
-ProjectManager.FreePins=false
-RCC.IPParameters=ADCFreqValue,ADCPresc,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,MCOFreq_Value,PLLCLKFreq_Value,PLLMCOFreq_Value,PLLMUL,PLLSourceVirtual,SYSCLKFreq_VALUE,SYSCLKSource,TimSysFreq_Value,USBFreq_Value,VCOOutput2Freq_Value
-ProjectManager.AskForMigrate=true
-Mcu.Name=STM32F103C(4-6)Tx
 Dma.RequestsNb=2
 CAN.CalculateTimeQuantum=1000.0
 ProjectManager.HalAssertFull=false
 VP_TIM1_VS_ClockSourceINT.Mode=Internal
 ADC1.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_1CYCLE_5
 Dma.USART1_TX.1.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
-PA2.Signal=ADCx_IN2
 ProjectManager.ProjectName=BionX_Minimum_Translator
-ProjectManager.UnderRoot=true
-Mcu.IP6=TIM1
 RCC.PLLMCOFreq_Value=36000000
-Mcu.IP7=USART1
+Mcu.Package=LQFP48
+PA14.Locked=true
+ProjectManager.ToolChainLocation=
+PA2.GPIO_Label=TorqueFromExternalSensor
+VP_SYS_VS_Systick.Signal=SYS_VS_Systick
+Dma.USART1_RX.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
+PA10.Signal=USART1_RX
+SH.ADCx_IN1.0=ADC1_IN1,IN1
+Dma.Request1=USART1_TX
+RCC.APB1TimFreq_Value=72000000
+NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+Dma.USART1_RX.0.Mode=DMA_NORMAL
+Dma.USART1_TX.1.Priority=DMA_PRIORITY_LOW
+TIM1.Period=35963
+NVIC.DMA1_Channel4_IRQn=true\:0\:0\:false\:false\:true\:false\:true
+Dma.Request0=USART1_RX
+Dma.USART1_RX.0.Instance=DMA1_Channel5
+ProjectManager.CustomerFirmwarePackage=
+PC14-OSC32_IN.Locked=true
+PA3.Signal=GPXTI3
+Dma.USART1_TX.1.Direction=DMA_MEMORY_TO_PERIPH
+VP_RTC_VS_RTC_Activate.Signal=RTC_VS_RTC_Activate
+RCC.PLLSourceVirtual=RCC_PLLSOURCE_HSE
+PC15-OSC32_OUT.Mode=LSE-External-Oscillator
+Dma.USART1_TX.1.Instance=DMA1_Channel4
+ProjectManager.ProjectFileName=BionX_Minimum_Translator.ioc
+ADC1.Rank-0\#ChannelRegularConversion=1
+PD1-OSC_OUT.Mode=HSE-External-Oscillator
+Dma.USART1_RX.0.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+PA10.Mode=Asynchronous
+Mcu.PinsNb=18
+ProjectManager.NoMain=false
+ADC1.IPParameters=Rank-0\#ChannelRegularConversion,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,NbrOfConversionFlag,master
+Dma.USART1_TX.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
+PC13-TAMPER-RTC.Signal=GPIO_Output
+ProjectManager.DefaultFWLocation=true
+PD0-OSC_IN.Signal=RCC_OSC_IN
+ProjectManager.DeletePrevious=true
+RCC.APB1CLKDivider=RCC_HCLK_DIV2
+PC14-OSC32_IN.Signal=RCC_OSC32_IN
+CAN.CalculateTimeBit=16000
+RCC.FamilyName=M
+PA0-WKUP.GPIO_Label=BatteryVoltage
+PA0-WKUP.Signal=ADCx_IN0
+RCC.ADCPresc=RCC_ADCPCLK2_DIV6
+PA13.Signal=SYS_JTMS-SWDIO
+PA11.Locked=true
+PA9.Mode=Asynchronous
+CAN.BS2=CAN_BS2_2TQ
+CAN.BS1=CAN_BS1_13TQ
+PC15-OSC32_OUT.Locked=true
+ProjectManager.TargetToolchain=SW4STM32
+Dma.USART1_RX.0.Direction=DMA_PERIPH_TO_MEMORY
+PA9.Signal=USART1_TX
+VP_TIM1_VS_ClockSourceINT.Signal=TIM1_VS_ClockSourceINT
+PC13-TAMPER-RTC.Locked=true
+RCC.USBFreq_Value=72000000
+PC15-OSC32_OUT.Signal=RCC_OSC32_OUT
+PA1.Signal=ADCx_IN1
+Dma.USART1_RX.0.PeriphInc=DMA_PINC_DISABLE
+PD0-OSC_IN.Mode=HSE-External-Oscillator
+Dma.USART1_TX.1.MemDataAlignment=DMA_MDATAALIGN_BYTE
+board=custom
+SH.GPXTI3.0=GPIO_EXTI3
+ProjectManager.LastFirmware=true
+PC13-TAMPER-RTC.GPIO_Label=Board-LED
+RCC.VCOOutput2Freq_Value=8000000
+RCC.APB2Freq_Value=72000000
+MxCube.Version=5.6.1
+SH.ADCx_IN0.ConfNb=1
+SH.ADCx_IN2.ConfNb=1
+NVIC.USB_LP_CAN1_RX0_IRQn=true\:0\:0\:false\:false\:true\:true\:true
+PA1.GPIO_Label=BatteryCurrent
+VP_SYS_VS_Systick.Mode=SysTick
+Dma.USART1_RX.0.MemDataAlignment=DMA_MDATAALIGN_BYTE
+PA9.Locked=true
+NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+CAN.IPParameters=CalculateTimeQuantum,CalculateTimeBit,BS1,BS2,Prescaler
+PA13.Mode=Serial_Wire
+ProjectManager.FreePins=false
+RCC.IPParameters=ADCFreqValue,ADCPresc,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,MCOFreq_Value,PLLCLKFreq_Value,PLLMCOFreq_Value,PLLMUL,PLLSourceVirtual,SYSCLKFreq_VALUE,SYSCLKSource,TimSysFreq_Value,USBFreq_Value,VCOOutput2Freq_Value
+ProjectManager.AskForMigrate=true
+Mcu.Name=STM32F103C(4-6)Tx
+PA2.Signal=ADCx_IN2
+ProjectManager.UnderRoot=true
+Mcu.IP8=USART1
+Mcu.IP6=SYS
+Mcu.IP7=TIM1
 ProjectManager.CoupleFile=false
 RCC.SYSCLKFreq_VALUE=72000000
-Mcu.Package=LQFP48
 RCC.TimSysFreq_Value=72000000
 ADC1.master=1
 PA3.Locked=true
@@ -151,40 +182,25 @@ KeepUserPlacement=false
 Dma.USART1_TX.1.Mode=DMA_NORMAL
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 PA13.Locked=true
-PA14.Locked=true
 USART1.VirtualMode=VM_ASYNC
 ProjectManager.CompilerOptimize=6
-ProjectManager.ToolChainLocation=
-PA2.GPIO_Label=TorqueFromExternalSensor
-VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 PA11.Signal=CAN_RX
-Dma.USART1_RX.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
 PA14.Signal=SYS_JTCK-SWCLK
-PA10.Signal=USART1_RX
 ProjectManager.HeapSize=0x200
+Mcu.Pin15=VP_RTC_VS_RTC_Activate
 Dma.USART1_TX.1.PeriphInc=DMA_PINC_DISABLE
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-Mcu.Pin13=VP_SYS_VS_Systick
-Mcu.Pin14=VP_TIM1_VS_ClockSourceINT
+Mcu.Pin16=VP_SYS_VS_Systick
+Mcu.Pin13=PA13
+Mcu.Pin14=PA14
 ProjectManager.ComputerToolchain=false
+Mcu.Pin17=VP_TIM1_VS_ClockSourceINT
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 ADC1.NbrOfConversionFlag=1
-SH.ADCx_IN1.0=ADC1_IN1,IN1
-Mcu.Pin11=PA13
-Mcu.Pin12=PA14
-Mcu.Pin10=PA12
-Dma.Request1=USART1_TX
-RCC.APB1TimFreq_Value=72000000
-NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-Dma.USART1_RX.0.Mode=DMA_NORMAL
-Dma.USART1_TX.1.Priority=DMA_PRIORITY_LOW
-NVIC.DMA1_Channel4_IRQn=true\:0\:0\:false\:false\:true\:false\:true
-Dma.Request0=USART1_RX
+Mcu.Pin11=PA11
+Mcu.Pin12=PA12
+Mcu.Pin10=PA10
 RCC.APB1Freq_Value=36000000
-Dma.USART1_RX.0.Instance=DMA1_Channel5
-ProjectManager.CustomerFirmwarePackage=
 ProjectManager.DeviceId=STM32F103C6Tx
 ProjectManager.LibraryCopy=1
 PA3.GPIO_Label=PASFromExternalSensor
-PA3.Signal=GPXTI3
-Dma.USART1_TX.1.Direction=DMA_MEMORY_TO_PERIPH
