--- a/BionX_Minimum_Translator.ioc
+++ b/BionX_Minimum_Translator.ioc
@@ -109,13 +109,13 @@ PA3.Signal=ADCx_IN3
 PA9.Mode=Asynchronous
 PA9.Signal=USART1_TX
 PB0.GPIOParameters=GPIO_Label
-PB0.GPIO_Label=DI-Brake
+PB0.GPIO_Label=EXTI0_PAS
 PB0.Locked=true
-PB0.Signal=GPIO_Input
+PB0.Signal=GPXTI0
 PB1.GPIOParameters=GPIO_Label
-PB1.GPIO_Label=EXTI1-PAS
+PB1.GPIO_Label=DI_Brake
 PB1.Locked=true
-PB1.Signal=GPXTI1
+PB1.Signal=GPIO_Input
 PB3.GPIOParameters=GPIO_Label
 PB3.GPIO_Label=DO-Light Switch
 PB3.Locked=true
@@ -193,8 +193,8 @@ SH.ADCx_IN2.0=ADC1_IN2,IN2
 SH.ADCx_IN2.ConfNb=1
 SH.ADCx_IN3.0=ADC1_IN3,IN3
 SH.ADCx_IN3.ConfNb=1
-SH.GPXTI1.0=GPIO_EXTI1
-SH.GPXTI1.ConfNb=1
+SH.GPXTI0.0=GPIO_EXTI0
+SH.GPXTI0.ConfNb=1
 USART1.BaudRate=9600
 USART1.IPParameters=VirtualMode,BaudRate
 USART1.VirtualMode=VM_ASYNC
